fix: Apply +5lb progression to all barbell exercises
Fix weight progression logic to properly detect all barbell exercises

Bug:
- Previous logic used hardcoded list of "main lifts" for +5 lb progression
- Many barbell exercises were missing from list (e.g., barbell-hang-clean)
- Missing exercises only got +2.5 lb progression, causing incorrect suggestions
- Example: 95 lbs maxed → suggested 95 lbs (should be 105 lbs)

Fix:
- Changed detection from hardcoded list to string matching
- Any exercise with "barbell" in ID now gets +5 lb progression
- Dumbbell exercises continue to get +2.5 lb progression
- Simpler, future-proof logic

Result:
- All barbell exercises: +5 lbs progression (95 → 100 → 105 with rounding)
- All dumbbell exercises: +2.5 lbs progression
- No manual list maintenance needed

Tested with: Barbell Hang Clean (4 sets × 5 reps @ 95 lbs)
Expected: 105 lbs suggestion ✓

--- a/index.html
+++ b/index.html
@@ -1944,9 +1944,8 @@
                 
                 if (allHitTop) {
                     // Determine progression amount based on exercise type
-                    const exerciseData = EXERCISES[exerciseId];
-                    const isMainLift = ['barbell-bench-press', 'barbell-squats', 'deadlifts', 'barbell-overhead-press', 
-                                       'deadlifts-conventional', 'back-squats'].includes(exerciseId);
+                    // All barbell exercises get +5 lbs, accessories get +2.5 lbs
+                    const isMainLift = exerciseId.toLowerCase().includes('barbell');
                     const progression = isMainLift ? 5 : 2.5;
                     suggestedWeight += progression;
                 }
